<resources>
    <string name="app_name">Placar de Tênis</string>

    <string name="games">Games</string>
    <string name="guest">Convidado</string>
    <string name="points">Pontos</string>
    <string name="sets">Sets</string>
    <string name="start_match">Começar partida</string>
    <string name="you">Você</string>
    <string name="your_name">Seu Nome</string>
    <string name="click_to_add_point">Pontuar</string>
    <string name="cancel">Cancelar</string>
    <string name="start">Iniciar</string>

    <string-array name="months">
        <item>Jan</item>
        <item>Fev</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Set</item>
        <item>Out</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>
</resources>
