...
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintEnd_toStartOf="@id/vi_item_history_anchor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_history_host_sets"
                tools:text="@string/placeholder_host"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_item_history_guest_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:maxLines="1"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toEndOf="@id/tv_item_history_host_name"
                app:layout_constraintTop_toBottomOf="@id/tv_item_history_guest_sets"
                tools:text="@string/placeholder_guest"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

